# semibounded-lattices

./: README.md  semibounded-lattices.cabal  stack.yaml
semibounded-lattices/: README.md  semibounded-lattices.cabal
semibounded-lattices-natural-numbers/: README.md  semibounded-lattices-natural-numbers.cabal
semibounded-lattices-natural-numbers/src/Algebra/SemiBoundedLattice/: Natural.hs
semibounded-lattices/src/Algebra/: SemiBoundedLattice.hs
src/Algebra/: SemiBoundedLattice.hs
