name:                semibounded-lattices-natural-numbers
version:             0.1.0.0
synopsis:            Instances of semibounded lattices for natural numbers
description:         Please see README.md
homepage:            https://github.com/xu-hao/semibounded-lattices#readme
license:             BSD3
license-file:        LICENSE
author:              Hao Xu
maintainer:          xuh@email.unc.edu
copyright:           2016 Hao Xu
category:            Data
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Algebra.SemiBoundedLattice.Natural
  build-depends:       base >= 4 && < 5,
                       lattices >= 1.4,
                       semibounded-lattices >= 0.1.0.1,
                       natural-numbers
  default-language:    Haskell2010

test-suite semibounded-lattices-natural-numbers-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , semibounded-lattices-natural-numbers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/xu-hao/semibounded-lattices
